# fastapi-prod-skeleton

./: .env  Dockerfile  Makefile  README.md  compose.yaml  dev.db  pyproject.toml
app/: config.py  logging.py  main.py
app/api/v1/: router.py  schemas.py
app/api/v1/routes/: items.py
app/domain/: errors.py
app/infra/: auth.py  db.py  deps.py  idempotency.py  metrics.py  middleware.py  models.py  pagination.py
docs/: agent-directives.md  api-design.md  cursor-enforcement-rules.md  lifecycle-event.md  operational-readiness.md  scaling-guidance.md
tests/: test_items.py
